buildpacks/nodejs-npm-install/tests/snapshots/test_npm_build_scripts.snap
---
source: test_support/src/lib.rs
---
## Heroku Node.js Engine

- Checking Node.js version
  - Detected Node.js version range: `>=14.0.0 <15.0.0-0`
  - Resolved Node.js version: `14.21.3`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v14.21.3/node-v14.21.3-<arch>.tar.gz ... (<time_elapsed>)
  - Downloading ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `14.21.3 (<arch>)`
  - Installing Node.js `14.21.3 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)

## Heroku Node.js npm Install

- Installing node modules
  - Using npm version `6.14.18`
  - Creating npm cache
  - Configuring npm cache directory
  - Running `npm ci "--production=false"`

      added <NUMBER> packages in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - Running `npm run heroku-prebuild`


      > npm-project@1.0.0 heroku-prebuild /workspace
      > echo 'executed heroku-prebuild'

      executed heroku-prebuild

  - Done (<time_elapsed>)
  - Running `npm run build`


      > npm-project@1.0.0 build /workspace
      > echo 'executed build'

      executed build

  - Done (<time_elapsed>)
  - Running `npm run heroku-postbuild`


      > npm-project@1.0.0 heroku-postbuild /workspace
      > echo 'executed heroku-postbuild'

      executed heroku-postbuild

  - Done (<time_elapsed>)
- Configuring default processes
  - Skipping default web process (no start script defined)
- Done (finished in <time_elapsed>)
