buildpacks/nodejs-npm-install/tests/snapshots/test_npm_install_new_package.snap
---
source: test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
2 of 4 buildpacks participating
heroku/nodejs-engine      <buildpack-version>
heroku/nodejs-npm-install <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js Engine

- Checking Node.js version
  - Detected Node.js version range: `>=22.0.0 <23.0.0-0`
  - Resolved Node.js version: `22.18.0`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.18.0/node-v22.18.0-<arch>.tar.gz ... (OK)
  - Downloading ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.18.0 (<arch>)`
  - Installing Node.js `22.18.0 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)

## Heroku Node.js npm Install

- Installing node modules
  - Using npm version `10.9.3`
  - Creating npm cache
  - Configuring npm cache directory
  - Running `npm ci`


      added <NUMBER> packages, and audited <NUMBER> packages in <time_elapsed>

      found 0 vulnerabilities

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `npm prune`


      up to date, audited <N> packages in <time_elapsed>

      found 0 vulnerabilities

  - Done (<time_elapsed>)
- Configuring default processes
  - Skipping default web process (no start script defined)
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs-engine:available_parallelism'
Adding layer 'heroku/nodejs-engine:dist'
Adding layer 'heroku/nodejs-engine:web_env'
Adding layer 'heroku/nodejs-npm-install:npm_runtime_config'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs-engine:dist'
Adding cache layer 'heroku/nodejs-npm-install:npm_cache'
Successfully built image '<image-name>'

--------------------------------------------- REBUILD ---------------------------------------------
===> ANALYZING
Restoring data for SBOM from previous image
===> DETECTING
2 of 4 buildpacks participating
heroku/nodejs-engine      <buildpack-version>
heroku/nodejs-npm-install <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js Engine

- Checking Node.js version
  - Detected Node.js version range: `>=22.0.0 <23.0.0-0`
  - Resolved Node.js version: `22.18.0`
- Installing Node.js distribution
  - Reusing Node.js 22.18.0 (<arch>)
- Done (finished in <time_elapsed>)

## Heroku Node.js npm Install

- Installing node modules
  - Using npm version `10.9.3`
  - Restoring npm cache
  - Configuring npm cache directory
  - Running `npm ci`


      added <NUMBER> packages, and audited <NUMBER> packages in <time_elapsed>

      found 0 vulnerabilities

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `npm prune`


      up to date, audited <N> packages in <time_elapsed>

      found 0 vulnerabilities

  - Done (<time_elapsed>)
- Configuring default processes
  - Skipping default web process (no start script defined)
- Done (finished in <time_elapsed>)
===> EXPORTING
Reusing layer 'heroku/nodejs-engine:available_parallelism'
Reusing layer 'heroku/nodejs-engine:dist'
Reusing layer 'heroku/nodejs-engine:web_env'
Reusing layer 'heroku/nodejs-npm-install:npm_runtime_config'
Reusing layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Reusing layer 'buildpacksio/lifecycle:launcher'
Reusing layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Reusing cache layer 'heroku/nodejs-engine:dist'
Adding cache layer 'heroku/nodejs-engine:dist'
Adding cache layer 'heroku/nodejs-npm-install:npm_cache'
Successfully built image '<image-name>'
